# pairwriter

./: .gitignore  Cargo.toml  README.md  \  debug_config.lua  debugconfig.lua  log.txt  todo.md
.github/workflows/: integraion_test.yml  rust.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: connection.rs  integration_testing.rs  lib.rs  main.rs
src/client/: api_client.rs  messaging.rs  mod.rs
src/communication/: api_client.rs  api_server.rs  automergeTree.rs  crdt_tree.rs  file_tree.rs  mod.rs  rpc.rs
src/communication/crdt_tree/: buf_func.rs  client_crdt.rs  client_funcs.rs  server_crdt.rs  server_crdt_test.rs  server_funcs.rs  transaction.rs
src/communication/crdt_tree/server_funcs/server_tests/: mod.rs  server_dir_test.rs  server_files_test.rs
src/communication/crdt_tree/test/: mod.rs  server_dir_test.rs  server_files_test.rs
src/communication/crdt_tree/tests/: mod.rs  server_dir_test.rs  server_files_test.rs
src/communication/file_tree/: buf_func.rs  client_funcs.rs  crdt.rs  server_funcs.rs
src/communication/file_tree/server_funcs/server_tests/: mod.rs  server_files_test.rs
src/server/: MESSAGES.json  api_server.rs  connection.rs  messageing.rs  mod.rs  test.rs  variables.rs  watcher.rs
test/: CLIENT_TEST_CODE_SNIPPET.rs  SERVER_TEST_CODE_SNIPPET.rs  clean_test.sh  log.txt  test_client.sh  test_injection.rs  test_server.sh
test/CLIENT/: CLIENT_CREATE_FILE.rs  CLIENT_EDIT_FILE.rs  CLIENT_TEST_CODE_SNIPPET.rs
test/SERVER/: SERVER_TEST_CODE_SNIPPET.rs
