[package]
name = "shared-programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.15"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false , features = ["alloc"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
lazy_static = "1.4.0"
futures-util = "0.3"
bincode = { version = "2.0.0-rc.3" }
automerge = "0.5.11"
