[package]
name = "pairwriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.15"
futures = { version = "0.3", default-features = false , features = ["alloc"] }
lazy_static = "1.4.0"
futures-util = "0.3"
bincode = { version = "2.0.0-rc.3" }
automerge = "0.5.11"
walkdir = "2.3" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serial_test = "0.5"
ctor = "0.1"

[features]
integration_testing = []
integration_testing_client = ["integration_testing"]
integration_testing_server = ["integration_testing"]

[lib]
